[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/other/wheel/wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/message-3d/message_3d.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/flag/flag.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/units/sieges/ram/ram_base.png" type="Texture" id=10]
[ext_resource path="res://scene/units/sieges/siege_tower/siege_tower.gd" type="Script" id=12]

[sub_resource type="CapsuleShape" id=38]
radius = 0.456858

[node name="siege_tower" type="KinematicBody"]
script = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 38 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="roof_1" type="Sprite3D" parent="pivot"]
transform = Transform( 2.14638, -7.94407e-09, 0.442116, 1.05797, -7.13477e-08, -0.896958, -5.15424e-08, 4.98715, -4.1421e-08, -0.22018, 0.365179, 0.0336222 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="roof_2" type="Sprite3D" parent="pivot"]
transform = Transform( 1.73557, 0, -1.20084e-08, 0, 3.58861, 0, -2.87355e-08, 0, 1, 0.139555, 0.48819, 1.32843 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="roof_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1.73557, 0, -1.20084e-08, 0, 3.58861, 0, -2.87355e-08, 0, 1, 0.139555, 0.48819, -1.29381 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="roof_4" type="Sprite3D" parent="pivot"]
transform = Transform( -7.64437e-08, 0, 1, 0, 3.58861, 0, -1.72231, 0, -4.30435e-08, 1.39836, 0.48819, 0.0362934 )
modulate = Color( 0.356863, 0.223529, 0, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="side_1" type="Sprite3D" parent="pivot"]
transform = Transform( 2.393, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.66249, 1.08471 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="side_2" type="Sprite3D" parent="pivot"]
transform = Transform( 2.393, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.66249, -0.970318 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="side_3" type="Sprite3D" parent="pivot"]
transform = Transform( -6.55671e-08, 0, 1, 0, 1, 0, -1.5, 0, -4.37114e-08, 1.77195, -0.616117, 0.0394468 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="side_4" type="Sprite3D" parent="pivot"]
transform = Transform( -6.55671e-08, 0, 1, 0, 1, 0, -1.5, 0, -4.37114e-08, -1.79524, -0.662228, 0.0394468 )
modulate = Color( 0.337255, 0.317647, 0.286275, 1 )
alpha_cut = 2
texture = ExtResource( 10 )

[node name="wheel_1" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.968586, -0.986078, -1.27739 )

[node name="wheel_4" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.968586, -0.986078, 1.354 )

[node name="wheel_2" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.00062, -0.986078, -1.27739 )

[node name="wheel_3" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -1.00062, -0.986078, 1.34599 )

[node name="wheel_5" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.0294175, -0.986078, 1.34599 )

[node name="wheel_6" parent="pivot" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.0294173, -0.986078, -1.31078 )

[node name="flag" parent="pivot" instance=ExtResource( 4 )]
transform = Transform( -0.8, 0, -1.50996e-07, 0, 0.8, 0, 1.20797e-07, 0, -1, -1.04264, 1.36403, -1.2826 )

[node name="turret_pos" type="Position3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.330703, 0 )

[node name="hpBar" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.352857, 0, 0, 0, 0.623045, 0, 0, 0, 1, 0, 5.02291, 0 )

[node name="owner" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 5.58484, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Tween_dead" type="Tween" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.0
unit_size = 10.0
bus = "sfx"

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]

[connection signal="tween_completed" from="Tween_dead" to="." method="_on_Tween_dead_tween_completed"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
